--- a/arrowpanel/src/main/res/layout/arrowtip_simple_text.xml
+++ b/arrowpanel/src/main/res/layout/arrowtip_simple_text.xml
@@ -9,6 +9,7 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
+        android:maxWidth="380dp"
         android:padding="8dp"
         android:singleLine="false"
         android:textColor="#000000"
