--- a/app/src/main/res/layout/panel.xml
+++ b/app/src/main/res/layout/panel.xml
@@ -1,42 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
-    android:layout_height="match_parent"
+    android:layout_width="180dp"
+    android:layout_height="200dp"
     android:gravity="center"
-    android:orientation="vertical"
-    android:padding="6dp">
+    android:orientation="vertical">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="10dp"
-        android:text="Button 1"
-        android:textAllCaps="false"
-        android:textColor="#000000" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="10dp"
-        android:text="Button 1"
-        android:textAllCaps="false"
-        android:textColor="#000000" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="10dp"
-        android:text="Button 1"
-        android:textAllCaps="false"
-        android:textColor="#000000" />
+            <TextView
+                android:id="@+id/tv1"
+                style="@style/ButtonStyle"
+                android:text="New Folder" />
+
+            <View style="@style/LineStyle" />
+
+            <TextView
+                android:id="@+id/tv2"
+                style="@style/ButtonStyle"
+                android:text="Past" />
+
+            <View style="@style/LineStyle" />
+
+            <TextView
+                android:id="@+id/tv3"
+                style="@style/ButtonStyle"
+                android:text="Select all" />
+
+            <TextView
+                android:id="@+id/tv8"
+                style="@style/ButtonStyle"
+                android:text="Show Desktop in Files" />
+
+            <TextView
+                android:id="@+id/tv4"
+                style="@style/ButtonStyle"
+                android:text="Open in Terminal" />
+
+            <View style="@style/LineStyle" />
+
+            <TextView
+                android:id="@+id/tv5"
+                style="@style/ButtonStyle"
+                android:text="Change Background" />
+
+            <View style="@style/LineStyle" />
+
+            <TextView
+                android:id="@+id/tv6"
+                style="@style/ButtonStyle"
+                android:text="Display Settings" />
+
+            <TextView
+                android:id="@+id/tv7"
+                style="@style/ButtonStyle"
+                android:text="Settings" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </ScrollView>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
