--- a/arrowpanel/src/main/res/values/attrs.xml
+++ b/arrowpanel/src/main/res/values/attrs.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="ArrowContainer">
-        <attr name="arrowTip_fillColor" format="color" />
-        <attr name="arrowTip_strokeColor" format="color" />
-        <attr name="arrowTip_shadowColor" format="color" />
-
-        <attr name="arrowTip_arrowWidth" format="dimension" />
-        <attr name="arrowTip_arrowHeight" format="dimension" />
-        <attr name="arrowTip_shadowDx" format="float" />
-        <attr name="arrowTip_shadowDy" format="float" />
-
-        <attr name="arrowTip_strokeWidth" format="dimension" />
-        <attr name="arrowTip_shadowRadius" format="dimension" />
-        <attr name="arrowTip_cornerRadius" format="dimension" />
+    <declare-styleable name="ArrowLayout">
+        <attr name="fillColor" format="color" />
+        <attr name="strokeColor" format="color" />
+        <attr name="shadowColor" format="color" />
+        <attr name="arrowWidth" format="dimension" />
+        <attr name="arrowHeight" format="dimension" />
+        <attr name="shadowDx" format="float" />
+        <attr name="shadowDy" format="float" />
+        <attr name="strokeWidth" format="dimension" />
+        <attr name="shadowRadius" format="dimension" />
+        <attr name="cornerRadius" format="dimension" />
     </declare-styleable>
 </resources>
