--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,20 @@
         <item name="android:layout_height">0.8dp</item>
         <item name="android:background">#11ffffff</item>
     </style>
+    <style name="PowerPanelButtonStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:gravity">start</item>
+        <item name="android:minWidth">110dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">#111111</item>
+    </style>
+
 </resources>
